# src/firecracker/swagger/firecracker.yaml
@@ -922,6 +922,13 @@ definitions:
       free_page_reporting:
         type: boolean
         description: Whether the free page reporting feature is enabled.
+      removable:
+        type: boolean
+        default: false
+        description:
+          If true, the device is placed behind a PCIe Root Port, which is what
+          makes it possible to hot-unplug it later. It consumes one of the ports
+          set aside by `pcie_hotplug_ports`. Requires PCI to be enabled.
 
   BalloonUpdate:
     type: object
@@ -1277,6 +1284,13 @@ definitions:
         description:
           Path to the socket of vhost-user-block backend.
           This field is required for vhost-user-block config should be omitted for virtio-block configuration.
+      removable:
+        type: boolean
+        default: false
+        description:
+          If true, the device is placed behind a PCIe Root Port, which is what
+          makes it possible to hot-unplug it later. It consumes one of the ports
+          set aside by `pcie_hotplug_ports`. Requires PCI to be enabled.
 
   BlockTopology:
     type: object
@@ -1325,6 +1339,13 @@ definitions:
           Flag to map backing file in read-only mode.
       rate_limiter:
         $ref: "#/definitions/RateLimiter"
+      removable:
+        type: boolean
+        default: false
+        description:
+          If true, the device is placed behind a PCIe Root Port, which is what
+          makes it possible to hot-unplug it later. It consumes one of the ports
+          set aside by `pcie_hotplug_ports`. Requires PCI to be enabled.
 
   Error:
     type: object
@@ -1613,6 +1634,13 @@ definitions:
         $ref: "#/definitions/RateLimiter"
       tx_rate_limiter:
         $ref: "#/definitions/RateLimiter"
+      removable:
+        type: boolean
+        default: false
+        description:
+          If true, the device is placed behind a PCIe Root Port, which is what
+          makes it possible to hot-unplug it later. It consumes one of the ports
+          set aside by `pcie_hotplug_ports`. Requires PCI to be enabled.
 
   PartialDrive:
     type: object
@@ -1856,6 +1884,13 @@ definitions:
     properties:
       rate_limiter:
         $ref: "#/definitions/RateLimiter"
+      removable:
+        type: boolean
+        default: false
+        description:
+          If true, the device is placed behind a PCIe Root Port, which is what
+          makes it possible to hot-unplug it later. It consumes one of the ports
+          set aside by `pcie_hotplug_ports`. Requires PCI to be enabled.
 
   SerialDevice:
     type: object
@@ -1897,6 +1932,13 @@ definitions:
         maximum: 4294967295
         description: (Logical) Block size for the hotpluggable memory in MiB. This will determine the logical
           granularity of hot-plug memory for the guest. Refer to the device documentation on how to tune this value.
+      removable:
+        type: boolean
+        default: false
+        description:
+          If true, the device is placed behind a PCIe Root Port, which is what
+          makes it possible to hot-unplug it later. It consumes one of the ports
+          set aside by `pcie_hotplug_ports`. Requires PCI to be enabled.
 
   MemoryHotplugSizeUpdate:
     type: object
@@ -1969,3 +2011,10 @@ definitions:
         description:
           This parameter has been deprecated and it will be removed in future
           Firecracker release.
+      removable:
+        type: boolean
+        default: false
+        description:
+          If true, the device is placed behind a PCIe Root Port, which is what
+          makes it possible to hot-unplug it later. It consumes one of the ports
+          set aside by `pcie_hotplug_ports`. Requires PCI to be enabled.
